# sdkman-cli-native

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  jreleaser.toml  jreleaser.yml
.cursor/rules/: project.mdc  tests.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: chloe-triage.yml  ci.yml  dependabot-digest.yml  notify-on-failure.yml  promote.yml  pull_request.yml  release.yml  triage-fork-pr.yml  triage-on-pr-completion.yml
src/: help_messages.rs  lib.rs  main.rs
src/commands/: current.rs  default.rs  help.rs  home.rs  mod.rs  uninstall.rs  version.rs
src/commands/snapshots/: config_help.snap  current_help.snap  default_help.snap  env_help.snap  flush_help.snap  help__tests__should_render_default_help_with_formatting.snap  help__tests__should_render_flush_help_with_formatting.snap  help__tests__should_render_home_help_with_formatting.snap  help__tests__should_render_selfupdate_help_with_formatting.snap  help__tests__should_render_uninstall_help_with_formatting.snap  help__tests__should_render_upgrade_help_with_formatting.snap  help__tests__should_render_use_help_with_formatting.snap  home_help.snap  install_help.snap  list_help.snap  main_help.snap  selfupdate_help.snap  uninstall_help.snap  update_help.snap  (+3 more)
src/utils/: constants.rs  directory_utils.rs  file_utils.rs  helpers.rs  mod.rs
tests/: cache.rs  config.rs  current.rs  default.rs  flush.rs  help.rs  helpers.rs  home.rs  support.rs  uninstall.rs  version.rs
tests/support/: mod.rs
