[package]
name = "sdkman-cli-native"
version = "0.7.14"
edition = "2021"
publish = false

[dependencies]
assert_cmd = "2.1.1"
proc-macro2 = "1.0.103"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
directories = "5.0.0"
dirs = "5.0.1"
exitcode = "1.1.2"
fs_extra = "1.3.0"
predicates = "3.1.3"
serial_test = "3.2.0"
symlink = "0.1.0"
tempfile = "3.23.0"
textwrap = "0.16.2"

[dev-dependencies]
insta = "1.44.1"
