[package]
name = "sdkman-cli-native"
version = "0.7.19"
edition = "2021"
publish = false

[dependencies]
assert_cmd = "2.1.2"
proc-macro2 = "1.0.106"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
directories = "5.0.0"
dirs = "5.0.1"
exitcode = "1.1.2"
fs_extra = "1.3.0"
predicates = "3.1.3"
serial_test = "3.3.1"
symlink = "0.1.0"
tempfile = "3.24.0"
textwrap = "0.16.2"

[dev-dependencies]
insta = "1.46.3"
