[package]
name = "sdkman-cli-native"
version = "0.7.33"
edition = "2021"
publish = false

[dependencies]
assert_cmd = "2.2.1"
proc-macro2 = "1.0.106"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
dirs = "5.0.1"
exitcode = "1.1.2"
fs_extra = "1.3.0"
predicates = "3.1.4"
serial_test = "3.4.0"
symlink = "0.1.0"
tempfile = "3.27.0"
textwrap = "0.16.2"

[dev-dependencies]
insta = "1.47.2"
